attempting to fix dropdown on mobile

--- a/bryant-bryantbuilt/week-3/project-00/css/style.css
+++ b/bryant-bryantbuilt/week-3/project-00/css/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 header {
   display: flex;
   flex-direction: row;
@@ -11,11 +15,6 @@ header {
 
 body {
   width: 100%;
-  margin: 0;
-}
-
-li {
-  list-style: none;
 }
 
 .top-nav ul {
@@ -28,33 +27,112 @@ li {
   margin: 2%;
 }
 
-.bg-img-wrapper {
+#portfolio, #quotes, #contacts {
   height: 100vh;
-  width: inherit;
-  display: flex;
 }
 
-.bg-img {
+#portfolio {
+  background-color: lightblue;
+}
+
+#quotes {
+  background-color: skyblue;
+}
+
+#contact {
+  background-color:#3480ad;
+}
+
+.bg-img-wrapper {
+  height: 200vh;
+  width: inherit;
   background: url("../images/mt_fuji.jpg");
   background-size: 100% auto;
   background-attachment: fixed;
-  width: 100%;
-  height: auto;
+  background-repeat: no-repeat;
 }
-
 
 .about-wrapper {
   width: inherit;
   margin: 0 auto;
   height: 600px;
-  background-color: transparent;
+  background-color: rgba(255,255,255,0);
   display: flex;
   justify-content: center;
-
+  padding-top: 100vh;
 }
 
 .about-box {
   background-color: #aaa;
   height: 600px;
   width: 50%;
+}
+
+/* Media Queries*/
+
+@media only screen and (max-width: 992px) {
+
+  .dropdown-on-med {
+  background-color: #fff;
+  margin: 0;
+  display: none;
+  min-width: 100px;
+  overflow-y: auto;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 9999;
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  }
+
+  .dropdown-on-med:focus {
+  outline: 0;
+  }
+
+  .dropdown-on-med li {
+  clear: both;
+  color: rgba(0, 0, 0, 0.87);
+  cursor: pointer;
+  min-height: 50px;
+  line-height: 1.5rem;
+  width: 100%;
+  text-align: left;
+  }
+
+  .dropdown-on-med li:hover, .dropdown-on-med li.active {
+  background-color: #eee;
+  }
+
+  .dropdown-on-med li:focus {
+  outline: none;
+  }
+
+  .dropdown-on-med li.divider {
+  min-height: 0;
+  height: 1px;
+  }
+
+  .dropdown-on-med li > a, .dropdown-on-med li > span {
+  font-size: 16px;
+  color: #26a69a;
+  display: block;
+  line-height: 22px;
+  padding: 14px 16px;
+  }
+
+  .dropdown-on-med li > span > label {
+  top: 1px;
+  left: 0;
+  height: 18px;
+  }
+
+  .dropdown-on-med li > a > i {
+  height: inherit;
+  line-height: inherit;
+  float: left;
+  margin: 0 24px 0 0;
+  width: 24px;
+  }
 }
